fluent-syntax/test/fixtures_behavior/standalone_identifier.ftl
foo
//~ ERROR E0005, pos 3, args "foo"
